...
      make.bottom.equalToSuperview().inset(20)
    }
  }

  func configureAppearance() {
    view.backgroundColor = .beigeBackground
    view.accessibilityIdentifier = "surf_spot_full_details_view"

    scrollView.accessibilityIdentifier = "surf_spot_full_details_scroll_view"

    closeButton.accessibilityIdentifier = "surf_spot_full_details_view_close_button"
    closeButton.setImage(.chevronDown, for: .normal)
    closeButton.rx.tap
      .bind { [weak self] in
        self?.viewModel.onClose?()
      }
      .disposed(by: disposeBag)

    favoriteButton.accessibilityIdentifier = "surf_spot_full_details_view_favorite_button"
    favoriteButton.setImage(.favoriteIcon, for: .normal)
    favoriteButton.setImage(.favoriteSelectedIcon, for: .selected)
    favoriteButton.isSelected = viewModel.isSurfSpotFavorite() ? true : false

    favoriteButton.rx.tap
      .bind { [weak self] in
...
