...
extension SurfSpotsViewController {
  func setMapSegment() {
    modePicker.insertSegment(withTitle: "Map", at: 0, animated: true)
  }

  func setListSegment() {
    modePicker.insertSegment(withTitle: "List", at: 1, animated: true)
  }

  @objc func segmentSelected(_ segmentControl: UISegmentedControl) {
    var lastDisplayedIndex: Int?

    if let index = viewModel.currentIndex {
...
